# bin_picking_llm

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docker/: Dockerfile.jetson  build.sh  run.sh
scripts/: calibrate_camera_base.py  calibrate_camera_robot_base.py  calibrate_robot_base.py  estimate_visual_pose.py  move_robot_with_llm.py  options.py  show_3d_position.py
src/bin_picking_llm/: calibration.py  camera.py  config.py  detection.py  llm.py  pose.py  predictor.py  robot.py  utils.py
tests/: test_calibration.py  test_detection.py
