[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bin_picking_llm"
version = "0.0.1"
description = "Package for controlling robots to perform bin picking using LLMs"
dependencies = [
  "detectron2@git+https://github.com/facebookresearch/detectron2.git",
  "opencv-contrib-python",
  "opencv-python",
  "pydobot",
  "pyrealsense2; platform_machine != 'aarch64'",
  "torch; platform_machine != 'aarch64'",
  "torchvision; platform_machine != 'aarch64'",
]

[project.optional-dependencies]
test = [
  "pytest",
]
